# invenio-global-search

./: .editorconfig  .ruff.toml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  babel.ini  pyproject.toml  run-tests.sh  setup.cfg  setup.py
docs/: conf.py  index.rst
invenio_global_search/: __init__.py  cli.py  components.py  config.py  ext.py  proxies.py  utils.py
invenio_global_search/serializers/: __init__.py
invenio_global_search/serializers/lom/: __init__.py  schema.py  serializer.py
invenio_global_search/serializers/marc21/: __init__.py  schema.py  serializer.py
invenio_global_search/serializers/rdm/: __init__.py  schema.py  serializer.py
tests/: __init__.py  conftest.py
