# -*- coding: utf-8 -*-
#
# Copyright (C) 2023 Graz University of Technology.
#
# invenio-global-search is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-global-search
version = attr: invenio_global_search.__version__
description = InvenioRDM module for a Global Search
long_description = file: README.rst, CHANGES.rst
keywords = invenio rdm search
license = MIT
author = TU Graz
author_email =
platforms = any
url = https://github.com/tu-graz-library/invenio-global-search
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules


[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    invenio-records-global-search>=0.0.1
    invenio-rdm-records>=4.0.0
    invenio-records-lom>=0.12.0
    invenio-records-marc21>=0.17.0

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    invenio-search[opensearch2]>=2.2.0
    pytest-black-ng>=0.4.0
    pytest-invenio>=2.1.0,<3.0.0
    ruff>=0.0.263
    sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_global_search = invenio_global_search:InvenioGlobalSearch
invenio_base.api_apps =
    invenio_global_search = invenio_global_search:InvenioGlobalSearch

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --doctest-glob="*.rst" --doctest-modules --cov=invenio_global_search --cov-report=term-missing
testpaths = docs tests invenio_global_search
